feat: add voice search functionality to inventory page

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
   * {
     -webkit-tap-highlight-color: transparent;
   }
-  
+
   /* Better touch targets */
   button,
   a,
@@ -29,4 +29,24 @@
   textarea {
     min-height: 44px;
   }
+}
+
+/* Seasonal background overlay */
+.seasonal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  z-index: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.content-with-background {
+  position: relative;
+  z-index: 1;
 }
